# controller/coba.go
@@ -136,6 +136,18 @@ func GetPresensi(c *fiber.Ctx) error {
 		})
 	}
 
+	// GetPresensiID godoc
+	// @Summary Get By ID Data Presensi.
+	// @Description Ambil per ID data presensi.
+	// @Tags Presensi
+	// @Accept json
+	// @Produce json
+	// @Param id path string true "Masukan ID"
+	// @Success 200 {object} Presensi
+	// @Failure 400
+	// @Failure 404
+	// @Failure 500
+	// @Router /presensi/{id} [get]
 	func DeletePresensiByID(c *fiber.Ctx) error {
 		id := c.Params("id")
 		if id == "" {
